tests/kulezi_tests/good/just_return01.lat
int main() { return 0; }

int f() { return 0; }

string g() { return "a" + "b" + "c" + "d"; }

boolean h() { return false || true; }