tests/kulezi_tests/bad/not_a_class03.lat
int f() {return 0;}

int main() {
    (f)null;
    return 0;
}